--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <article class="card">
             
             
-            <a href = "https://snoopy-cod1.github.io/Museum/"><h2>NetCity Museum</h2></a>
+            <a href = "https://snoopy-cod1.github.io/museum/"><h2>NetCity Museum</h2></a>
             <img src = "museum.png">
         </article>
         <article class="card">
