--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         </article>
         <article class="card">
             
-            <a href = ""><h2>WeatherNet</h2></a>
+            <a href = "https://snoopy-cod1.github.io/weather/"><h2>WeatherNet</h2></a>
             <img src = "weather.png">
         </article>
         <article class="card">
@@ -38,7 +38,7 @@
         </article>
         <article class="card">
             
-            <a href = ""><h2>ZooTransCompany</h2></a>
+            <a href = "https://snoopy-cod1.github.io/zoo/"><h2>ZooTransCompany</h2></a>
             <img src = "zoo.png">
         </article>
     </main>
